# linesnow

./: CMakeLists.txt  README.md
src/: linesnow.cpp  linesnow.h  main.cpp  terminal_mode.cpp  terminal_mode.h
